# Headfull-chrome

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README_FOR_LLM.md
scripts/: entrypoint.sh
src/: __init__.py  config.py
src/api/: __init__.py  main.py  routes.py
src/browser/: __init__.py  cdp.py  chrome.py  manager.py  resource_pool.py
src/jobs/: __init__.py  queue.py  store.py  worker.py
src/models/: __init__.py  job.py  session.py
src/utils/: logging.py
tests/unit/: test_models.py
